# _fi-app

client/: app.json  eas.json  package.json
client/app/: _layout.tsx  home.tsx
client/components/: AddExpense.tsx  AddIncome.tsx  CreateExpenseLabel.tsx  DailySpendings.tsx  ExpenseLabelCards.tsx  Incomes.tsx  MonthlyBudgetRemaining.tsx  Spendings.tsx  SyncButton.tsx  TotalSpendings.tsx
client/hooks/: useSync.ts
client/ios/: Podfile
client/ios/FiApp/: Info.plist
client/ios/FiApp.xcodeproj/: project.pbxproj
client/ios/FiApp.xcodeproj/xcshareddata/xcschemes/: FiApp.xcscheme
client/lib/: sync.ts
client/stores/: localState.store.ts
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
server/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs
